# result_manager

./: .gitignore  GSHHS_c_L1_0_360.npz  README.md  color_slips.ipynb  environment.yml  mapbox_token.py  mapbox_token.py.template  model_station.csv  process_arguments.ipynb  project_steep_meshes.ipynb  pyproject.toml  result_manager.py  result_manager_experiments.ipynb  setup.py  test_load_button.py
0000000343/: args_japan_command.json  model_meshes.csv  model_segment.csv  model_station.csv
0000000344/: args_japan_command.json  model_meshes.csv  model_meshes_old.csv  model_segment.csv  model_station.csv
